# python-named-pipe-processor

./: README.md  pyproject.toml  settings.json
outils/: clean.sh  run.sh
processing/: __init__.py  averager.py  parser.py  run.py
