[tool.poetry]
name = "alice&bob"
version = "0.1.0"
description = "Answer to Alice&Bob's python assessment ;D"
authors = ["William Horn <williams.horn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
